# simple-osd-daemons

./: .gitignore  Cargo.nix  Cargo.toml  README.md  flake.nix
battery/: Cargo.toml
battery/src/: main.rs
bluetooth/: Cargo.toml
bluetooth/src/: main.rs
brightness/: Cargo.toml
brightness/src/: main.rs
common/: Cargo.toml
common/examples/: simple.rs
common/src/: config.rs  daemon.rs  lib.rs  notify.rs
mpris/: Cargo.toml
mpris/src/: main.rs
pulseaudio/: Cargo.toml
pulseaudio/src/: main.rs
