[package]
name = "simple-osd-battery"
version = "0.1.0"
authors = ["Alexander Bantyev <balsoft@balsoft.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
battery = "0.7.6"
simple-osd-common = { version = "0.1", path = "../common" }
thiserror = "1.0"
log = "0.4.13"
