[package]
name = "simple-osd-common"
version = "0.1.0"
authors = ["Alexander Bantyev <balsoft@balsoft.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify-rust = "4"
configparser = "1.0.0"
xdg = "2.1"
zbus = "5.1.1"
async-io = "2.4.0"
log = "0.4.13"
pretty_env_logger = "0.4.0"
thiserror = "1.0"
