[package]
name = "simple-osd-pulseaudio"
version = "0.1.0"
authors = ["Alexander Bantyev <balsoft@balsoft.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libpulse-binding = "2.16.2"
simple-osd-common = { version = "0.1", path = "../common" }
